--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -26,7 +26,7 @@ header{
     // margin: auto;
     position: relative;
 }
-h1{
+.food{
 //   width: 99%;
   color: #FFF;
   font-family: 'Righteous', cursive;
