--- a/src/component/profile.scss
+++ b/src/component/profile.scss
@@ -1,5 +1,18 @@
 $bg: #f7f7f7;
 $color-primary: #ffe553;
+@import 'https://fonts.googleapis.com/css?family=Quicksand:400,700|Roboto:400,700,700i';
+@import url('https://fonts.googleapis.com/css?family=Comic+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Gotu&display=swap');
+$sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$quicksand: "Quicksand", $sans-serif;
+$roboto: "Roboto", $sans-serif;
+$gray: #C9C9C9;
+$smoke: #E3E3E3;
+$sky: #9AD3DE;
+$blue: #89BDD3;
+$orange: #E05038;
+$angle: 8deg;
+$content-max-width: 90%;
 
 * {
   box-sizing: border-box;
@@ -25,16 +38,27 @@ body {
   margin-top: 5em;
 }
 
-h1 {
-  margin-top: 0;
+.namm {
+  margin-top: 2%;
   margin-bottom: 1em;
-  font-size: 2.5em;
-  max-width: 650px;
+  font-size: 2em;
+  max-width: 600px;
   line-height: 1.3;
+  font-family: 'Gotu', sans-serif;
+  text-transform: uppercase;
+  color: rgba(9, 92, 109, 0.925);
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(238, 238, 241), 0 0 5px rgb(239, 239, 241);
+
+
+  
+
 }
 
 .content-block {
   margin-bottom: 3em;
+  margin-left: 3em;
+
+
 }
 
 #tabs {
@@ -78,13 +102,19 @@ p {
   margin: 0 auto;
   padding: 0 2em;
   @extend %clearfix;
+  padding: 6%;
+  border: solid 1px white;
+  
 }
+
+  
+  
+ 
 
 .stars {
   font-size: 1.6em;
 }
-
-.label {
+.name{
   color: lighten(black, 75%);
   letter-spacing: .08em;
   font-size: .65rem;
@@ -92,6 +122,29 @@ p {
   display: block;
   margin-bottom: .7rem;
   text-transform: uppercase;
+  float: left;
+}
+
+
+.rat {
+  color: lighten(black, 75%);
+  letter-spacing: .08em;
+  font-size: 0.9rem;
+  font-weight: bold;
+  display: block;
+  margin-bottom: .7rem;
+  text-transform: uppercase;
+  margin-left: 2%;
+}
+.label {
+  color: lighten(black, 75%);
+  letter-spacing: .08em;
+  font-size: 0.9rem;
+  font-weight: bold;
+  display: block;
+  margin-bottom: .7rem;
+  text-transform: uppercase;
+
 }
 
 span.stars {
@@ -154,7 +207,7 @@ span.stars {
 
 .panel {
   margin: 2em 0;
-  background: white;
+  background: rgb(112, 112, 112);
   padding: 4em 10em 4em 5.5em;
   position: relative;
   border-radius: 5px;
@@ -162,7 +215,7 @@ span.stars {
 }
 
 .courseStats {
-  margin: 0;
+  margin: 60px 0 0 0;
   padding: 0;
   list-style: none;
 
@@ -171,23 +224,27 @@ span.stars {
   }
   
   &__label {
-      background: white;
+      background: rgb(0, 126, 126);
       position: relative;
       margin-bottom: -4px;
       float: left;
       padding-right: 5px;
+
    }
   
    &__divider {     
       float: left;
-      height: 1px;
-      background: lighten(black, 90%);
+      height: 3px;
+      background: lighten(black, 100%);
+      box-shadow: 0 0 10px 0 rgba(7, 100, 153, 0.897);
+      
       width: 100%;
       display: block;
       margin-bottom: 1.4rem;
     }
   
-    &__data { display: block; font-weight:700; font-size:1.05rem;}
+    &__data { display: block; font-weight:400; font-size:1.05rem; text-transform: uppercase; box-shadow: 0 0 9px 0 rgba(9, 92, 109, 0.925); padding-bottom: 5%; padding-left: 5%; text-align: center;
+    }
 }
 
 
@@ -198,25 +255,118 @@ span.stars {
 
 
 
-.button {
-  $root: &;
-  padding: 15px 20px;
-  font-weight: 700;
-  background: #f3f3f3;
-  color: darket(#f3f3f3, 26%);
-  display: inline-block;
-  margin:0 .8em .8em 0;
-  &:first-child {margin-left:0;}
-  &#{$root}--booking {
-    background: $color-primary;
-      color: darken($color-primary, 26%);
-      ;}
+
+
+
+.avatar {
+
+    position: relative;
+    z-index: 1;
+    border-radius: 50%;
+    margin-left: 2%;
+    max-width: 90%;
+    height: auto;
+    box-shadow:
+        0 0 0 10px rgb(253, 253, 253),
+        0px 12px 0 10px rgba(rgb(100, 100, 100), 0.65),
+        -6px -12px 0 10px rgba(rgba(9, 92, 109, 0.925), 0.65);
+        margin-bottom: 12%;
 }
 
-.person{
-    width: 90%;
-    height: 95%;
+
+
+
+
+.btnz {
+  border: solid 1px rgba(255, 255, 255, 0.884);
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 35px;
+  font-size: 11px;
+  background-color: #222;
+  padding: 10px 10px;
+  margin: 2% 0 0 22%;
+  box-shadow: 0 5px 15px rgba(191, 183, 183, 0.2);
+  float: left;
 }
-.bt{
-    background-color: red;
+
+.btnz span {
+position: relative; 
+z-index: 1;
 }
+.btnz:hover{
+ color: #0b7685dc;
+ border: solid 1px #0b7685dc;
+}
+.cir{
+width: 18%;
+margin-left: -3%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.btn11 {
+  border: solid 1px rgba(255, 255, 255, 0.884);
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 30px;
+  font-size: 14px;
+  background-color: #222;
+  padding: 12px 40px;
+  margin: 0 auto;
+  box-shadow: 0 5px 15px rgba(191, 183, 183, 0.2);
+  margin-left: -3%;
+}
+
+.btn11 span {
+position: relative; 
+z-index: 1;
+}
+.btn11:hover{
+ color: #0b7685dc;
+ border: solid 1px #0b7685dc;
+}
+
+
+
+
+
+@media(max-width: 768px) {
+  .page__course{
+    padding:2%}
+
+    .btn11{
+      font-size: 9px;
+      padding: 12px 35px;
+
+
+    }
+
+  }
